# actix_web4-example

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  actix.service  prod.env
migrations/2022-04-10-041414_init/: down.sql  up.sql
public/app/: alipay.html  wxh5.html
src/: macros.rs  main.rs  middleware.rs  prelude.rs  schema.rs
src/ctrl/: mod.rs
src/ctrl/api/: admin.rs  ali.rs  alimp.rs  auth.rs  book.rs  mod.rs  redis.rs  upload.rs  user.rs  wx.rs  wxmp.rs
src/ctrl/chat/: mod.rs
src/ctrl/ws/: manage.rs  mod.rs  server.rs
src/models/: admin.rs  admin_log.rs  auth_group.rs  auth_permission.rs  book.rs  m2m_admin_group.rs  m2m_admin_permission.rs  m2m_group_permission.rs  mod.rs  post.rs  user.rs
src/modules/: alipay.rs  mod.rs  wx.rs  wxmp.rs  wxpay.rs
src/queues/: mail.rs
src/ser/: admin.rs  auth.rs  mod.rs  upload.rs  user.rs  wx.rs
src/serv/: admin.rs  auth.rs  user.rs
src/tasks/: delay_task.rs  mod.rs  persistent_task.rs  timer_task.rs
src/utils/: error.rs  init.rs  jwt.rs  mod.rs  valid.rs
templates/chat/: room.html
templates/mail/: hello.html
