[package]
edition = "2021"
exclude = ["migrations", "public"]
name = "actix_backend"
publish = false
version = "0.1.0"

# 设置二进制文件名
[[bin]]
name = "server"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = 'off'
incremental = true
codegen-units = 256
rpath = false

# https://rustwiki.org/zh-CN/cargo/reference/profiles.html
[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }

# WebSocket
actix = { version = "0.13", optional = true }
actix-codec = { version = "0.5", optional = true }
actix-web-actors = { version = "4.1", optional = true }

# https://crates.io/crates/awc
awc = { version = "3.0.0", features = ["openssl"] }

# reqwest = { version = "0.11", features = ["json", "multipart"] }

# 静态文件解析
actix-files = { version = "0.6", optional = true }

# https://crates.io/crates/deadpool-redis
deadpool-redis = { version = "0.10", features = ["serde"] }
# https://crates.io/crates/redis
redis = { version = "0.21", features = [
  # "cluster",
  "tokio-comp",
  "tokio-native-tls-comp",
] }

# Actix Web 的跨域资源共享 (CORS)
# https://crates.io/crates/actix-cors
actix-cors = { version = "0.6", optional = true }

# 文件上传
# https://crates.io/crates/actix-multipart
actix-multipart = "0.4"
sanitize-filename = "0.3"

# 媒体类型
# https://github.com/hyperium/mime
mime = "0.3"

# https://github.com/uuid-rs/uuid
uuid = { version = "1", features = ["v4"] }

# futures rs库的常见实用程序和扩展特性
# https://crates.io/crates/futures-util
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# 序列化与反序列化
# https://github.com/serde-rs/serde
serde = { version = "1", features = ["derive"] }

# 基于 serde 序列化JSON
# https://github.com/serde-rs/json
serde_json = "1.0"

# 解析 urlencode
# https://crates.io/crates/serde_qs
# https://docs.rs/serde_qs/0.9.1/serde_qs/index.html
serde_qs = { version = "0.9", optional = true }

# 解析xml
# https://crates.io/crates/serde-xml-rs
serde-xml-rs = { version = "0.5.1", optional = true }

# 日期时间
# https://github.com/chronotope/chrono
chrono = { version = "0.4", features = ["serde"] }


# https://crates.io/crates/bigdecimal
# https://docs.rs/bigdecimal/0.3.0/bigdecimal/
bigdecimal = { version = "0.3", features = ["serde"] }

# diesel orm
# https://github.com/diesel-rs/diesel
diesel = { version = "2.0.0-rc.0", features = ["mysql", "extras"] }
# diesel_async = {git = "https://github.com/weiznich/diesel_async", default-features = false, features = ["mysql"]}

# 加载 .env 文件到环境变量
# https://crates.io/crates/dotenv
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

# 日志工具
log = "0.4"
# 通过环境变量配置日志记录
env_logger = "0.9"

# 获取本地ip
local_ipaddress = { version = "0.1", optional = true }

# 模板引擎
# https://github.com/djc/askama
askama = { version = "0.11", optional = true }

# json 数据验证
# https://github.com/Keats/validator
validator = { version = "0.14", features = ["derive"] }

# 使用 Argon2 对密码进行哈希处理的 Rust 库
# https://crates.io/crates/rust-argon2
rust-argon2 = "1.0"

# jwt
# https://crates.io/crates/jsonwebtoken
jsonwebtoken = "8"

itertools = "0.10.3"

# 七牛云上传
# https://github.com/qiniu/rust-sdk
qiniu-sdk = { version = "0.1", features = [
  "utils",
  "etag",
  "credential",
  "upload",
  "upload-token",
  "http",
  "http-client",
  "reqwest",
  "apis",
  "objects",
  "async",
], optional = true }

# https://crates.io/crates/rand
# https://rust-random.github.io/book/guide-start.html
rand = "0.8"

regex = "1.5.5"
lazy_static = "1.4.0"


# smtp 发送电子邮件 
# https://crates.io/crates/lettre
# https://github.com/lettre/lettre
lettre = { version = "0.10.0-rc.6", default-features = false, features = [
  "smtp-transport",
  "pool",
  "tokio1",
  "tokio1-native-tls",
  # "native-tls",
  "hostname",
  "builder",
], optional = true }


# https://crates.io/crates/openssl
openssl = { version = "0.10", features = ["vendored"] }

# https://crates.io/crates/hex
hex = { version = "0.4" }

# 对url进行转义编码
# https://crates.io/crates/urlencoding 
urlencoding = { version = "2.1.0", optional = true }

# 解析或构建标准的URL
# https://crates.io/crates/url
url = { version = "2", features = ["serde"] }

# 轻松地进行惯用错误处理
# https://github.com/dtolnay/anyhow
anyhow = "1.0"

[features]
# default = ["full"]
default = ["dev", "cors"]
full = [
  "dev",
  "cors",
  "qiniu",
  "wx",
  "wxmp",
  "wxpay",
  "ali",
  "alimp",
  "alipay",
  "ws",
  "mail",
]

# 开发环境
dev = ["dep:local_ipaddress", "dep:actix-files"]

# 是否需要支持跨域
cors = ["dep:actix-cors"]

# 七牛云上传
qiniu = ["dep:qiniu-sdk"]

# 微信 web
wx = ["dep:serde_qs", "dep:serde-xml-rs"]

# 微信小程序
wxmp = []

# 微信支付
wxpay = []

# 支付宝
ali = ["dep:urlencoding"]

# 支付宝支付
alipay = ["dep:urlencoding"]

# 支付宝小程序
alimp = []

# 模板渲染
template = ["dep:askama"]

# WebSocket
ws = ["dep:actix", "dep:actix-codec", "dep:actix-web-actors"]

# 发送电子邮件
mail = ["dep:lettre", "dep:askama"]
